--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,5 +1,5 @@
 {% extends 'base_template.html' %}
 
 {% block content %}
-    <h1>This is a homepage</h1>
+    <h1>This is a Homepage</h1>
 {% endblock %}
