--- a/studij/templates/studij/psvss.html
+++ b/studij/templates/studij/psvss.html
@@ -1,5 +1,5 @@
 {% extends 'base_template.html' %}
 
 {% block content %}
-    <h1>Preddiplomski sveučilišni studij strojarstva</h1>
+    <h1>Preddiplomski sveučilišni studij računarstva</h1>
 {% endblock %}
