--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -1,4 +1,6 @@
-{% block body %}
+{% extends 'base_template.html' %}
+
+{% block content %}
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
