created new model tema

--- a/objava/templates/objava/post.html
+++ b/objava/templates/objava/post.html
@@ -4,6 +4,7 @@
     <form method="post">
     {% csrf_token %}
     {{ form }}
+        <h1>{{test}}</h1>
     <button type="submit">Objavi</button>
 </form>
 {% endblock %}
