--- a/tema/templates/tema/predmet.html
+++ b/tema/templates/tema/predmet.html
@@ -3,5 +3,6 @@
 {% block content %}
 <h1>EVO NAS NAPOKON na stranici {{kolegij_id}}</h1>
 <h3>sad ide app objava</h3>
+<h3>{{studij_id}}</h3>
 <h2>template predmet.html se nalazi u studij/templates/studij/predmet.html i tu bi tribalo trpati iz aplikacije objava??nez kako ćeš to</h2>
 {% endblock %}
