--- a/objava/templates/objava/post.html
+++ b/objava/templates/objava/post.html
@@ -1,10 +1,5 @@
-{% extends 'base_template.html' %}
+{% extends 'mypage.html' %}
 
 {% block content %}
-    <form method="post">
-    {% csrf_token %}
-    {{ form }}
-        <h1>{{test}}</h1>
-    <button type="submit">Objavi</button>
-</form>
+<h1>test test</h1>
 {% endblock %}
