--- a/account/templates/account/mypage.html
+++ b/account/templates/account/mypage.html
@@ -25,7 +25,10 @@
          <h1>Pozdrav {{ user.username }}! Ovo je tvoj profil</h1>
         {% if user.is_authenticated %}
         <img src="{{ user.student.profile_image.url }}" width="240">
-        <h2> Tu će ići ispis predmeta koje si ti bookmarka:</h2>
+        <h2>Moji kolegiji:</h2>
+        {% for kolegij in svi_moji_kolegiji %}
+             <a href="/studij/studijski_programi/studij={{kolegij.studij_id_id}}/semestar={{kolegij.semestar}}/kolegij={{kolegij.kolegij_id}}">{{kolegij.kolegij_ime}}</a><br><br>
+        {% endfor %}
         {% endif %}
         {% endblock %}
 
