--- a/tema/templates/tema/predmet.html
+++ b/tema/templates/tema/predmet.html
@@ -4,11 +4,19 @@
 <form method="post">
     {% csrf_token %}
     {{ form }}
-    <button type="submit">Stvori novu temu</button>
+    <button type="submit" name="dodaj_temu">Dodaj novu temu</button>
 </form>
 <h1>{{kolegij_id}}</h1>
+<form method="post">
+    {% csrf_token %}
+    {% if moj_kolegij %}
+    <button type="submit" name="favorit">Izbrisi iz mojih kolegija</button>
+    {% else %}
+    <button type="submit" name="favorit">Dodaj u moj kolegij</button>
+    {% endif %}
+</form>
 <h1>Otvorene teme:</h1>
  {% for tema in sve_teme %}
-      <a href="/objava/studij={{studij_id}}/semestar={{semestar_num}}/kolegij={{kolegij_id}}/tema={{tema.tema_id}}">{{tema.tema_ime}}</a><br><br>
+      <a href="/objava/studij={{studij_id}}/semestar={{semestar}}/kolegij={{kolegij_id}}/tema={{tema.tema_id}}">{{tema.tema_ime}}</a><br><br>
     {% endfor %}
 {% endblock %}
