--- a/account/templates/account/settings.html
+++ b/account/templates/account/settings.html
@@ -1,5 +1,11 @@
 {% extends 'base_template.html' %}
 
 {% block content %}
-    <h1>Postavke korisnika</h1>
+<h1>Postavke korisnika</h1>
+<form method="post"  enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+    {{ student_form.as_p}}
+    <button type="submit">Spremi promjene</button>
+</form>
 {% endblock %}
