--- a/account/templates/account/mypage.html
+++ b/account/templates/account/mypage.html
@@ -1,36 +1,15 @@
+{% extends 'base_template.html' %}
 {% load static from staticfiles %}
 
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Jez</title>
-        <link rel="stylesheet" href="{% static 'style.css' %}">
-    </head>
 
-    <body>
-        {% if user.is_authenticated %}
-            <form action="{% url 'account:logout' %}" method="post">
-                {% csrf_token %}
-                <button type="submit" align="right">Logout</button>
-            </form>
-        <a href="{% url 'account:mypage' %}">Moj profil</a>
-        {% endif %}
-        <a href="{% url 'homepage'%}">Početna</a>
-        <a href="{% url 'studij:homepage'%}">Studiji</a>
-        <a href="">Forum</a>
-        <a href="{% url 'account:settings'%}">Postavke</a>
-        {% block content %}
-
-         <h1>Pozdrav {{ user.username }}! Ovo je tvoj profil</h1>
-        {% if user.is_authenticated %}
+{% block content %}
+    <h1>Pozdrav {{ user.username }}! Ovo je tvoj profil</h1>
+    {% if user.is_authenticated %}
         <img src="{{ user.student.profile_image.url }}" width="240">
         <h2>Moji kolegiji:</h2>
         {% for kolegij in svi_moji_kolegiji %}
              <a href="/studij/studijski_programi/studij={{kolegij.studij_id_id}}/semestar={{kolegij.semestar}}/kolegij={{kolegij.kolegij_id}}">{{kolegij.kolegij_ime}}</a><br><br>
         {% endfor %}
-        {% endif %}
-        {% endblock %}
+    {% endif %}
+{% endblock %}
 
-    </body>
-</html>
