--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -19,11 +19,13 @@
                 <button type="submit">Logout</button>
             </form>
             <a href="{% url 'account:mypage' %}">Moj profil</a>
+            <a href="{% url 'studij:homepage'%}">Studiji</a>
+            <a href="">Forum</a>
+            <a href="{% url 'account:settings'%}">Postavke</a>
         {% else %}
             <a href="{% url 'account:login' %}">Login</a>
             <a href="{% url 'account:signup' %}">Signup</a>
         {% endif %}
-
         <a href="{% url 'homepage'%}">Pocetna</a>
         <a href="{% url 'za_brucose:homepage'%}">Za brucose</a>
         <a href="{% url 'tko_smo:homepage'%}">Tko smo?</a>
