--- a/studij/templates/studij/semestri.html
+++ b/studij/templates/studij/semestri.html
@@ -1,4 +1,4 @@
-{% extends 'mypage.html' %}
+{% extends 'base_template.html' %}
 
 {% block content %}
  <h1>tu se prikazuje broj semestara ovisno preddipl/dipl</h1>
