--- a/objava/templates/objava/post.html
+++ b/objava/templates/objava/post.html
@@ -2,8 +2,18 @@
 
 {% block content %}
     {% for objava in sve_objave %}
+        {% if objava.objava_id  and  user.username in svi_lajkovi %}
+            <p>Tu buton za lajk i onda ide jedna fun</p>
+        {% else %}
+            <p>Nije lajkano buton za unlike</p>
+        {% endif %}
         <h3>{{ objava.username }} {{ objava.date }}</h3>
         <p>{{ objava.tekst }}<p>
+    {% endfor %}
+
+    {% for lajk in lajkovi %}
+        <h3>{{ lajk.username }} {{ lajk.objava_id }}</h3>
+
     {% endfor %}
 <form method="post">
     {% csrf_token %}
