--- a/objava/templates/objava/post.html
+++ b/objava/templates/objava/post.html
@@ -9,13 +9,14 @@
         {% endif %}
         <h3>{{ objava.username }} {{ objava.date }}</h3>
         <p>{{ objava.tekst }}<p>
+    <a href="/media/objava_att/{{objava.attachment}}" download>{{objava.attachment}}</a>
     {% endfor %}
 
     {% for lajk in lajkovi %}
         <h3>{{ lajk.username }} {{ lajk.objava_id }}</h3>
 
     {% endfor %}
-<form method="post">
+<form method="post" enctype="multipart/form-data" >
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" name="objavi">Objavi</button>
