--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -10,7 +10,8 @@
 <div class="container login-container">
             <div class="row">
                 <div class="col-md-6 login-form-1">
-                    <form action="{% url 'account:login' %}" method="post">
+                    <h3>Registriraj se</h3>
+                    <form method="post">
                         {% csrf_token %}
                         <div class="form-group">
                             <input type="text" class="form-control" name="username" id="id_username" maxlength="150" placeholder="Korisničko ime">
@@ -33,18 +34,27 @@
                         </div>
 
                         <div class="form-group">
+                            <input type="password" class="form-control" name="password2"  id="id_password2" placeholder="Ponovi lozinku">
+                        </div>
+
+
+                        <div class="form-group">
                             {{student_form.studij_id}}
                         </div>
 
                         <div class="form-group">
-                            <input type="submit" class="btnSubmit" value="Registriraj se" />
+                            <input type="checkbox" class="form-check-inline" required name="terms"> Prihvaćam <a href="pravila.html"><u>pravila korištenja</u></a>
+                        </div>
+
+                        <div class="form-group">
+                            <input type="submit" class="btnSubmit" value="Registriraj me" />
                         </div>
 
                         <div class="form-group">
                             <a href="{% url 'account:login' %}" class="ForgetPwd">Imaš već račun? Prijavi se!</a>
                         </div>
                     </form>
-                    <h3>Registriraj se</h3>
+
                 </div>
             </div>
         </div>
