--- a/studij/templates/studij/kolegiji.html
+++ b/studij/templates/studij/kolegiji.html
@@ -1,8 +1,9 @@
-{% extends 'index.html' %}
+{% extends 'account/mypage.html' %}
 
 {% block content %}
  <h1>Ide popis predmeta po semestru!!</h1>
     {% csrf_token %}
+    <br><br><br><br><br><br><br><br><br>
     {% for kolegij in kolegiji %}
         <a href="/studij/studijski_programi/studij={{studij_id}}/semestar={{semestar_num}}/kolegij={{kolegij.kolegij_id}}">{{kolegij.kolegij_ime}}</a><br><br>
         <form method="post">
