--- a/account/templates/account/mypage.html
+++ b/account/templates/account/mypage.html
@@ -1,15 +1,82 @@
-{% extends 'index.html' %}
-{% load static from staticfiles %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Jež</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="description" content="Unicat project">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/bootstrap4/bootstrap.min.css' %}">
+<link href="{% static 'plugins/font-awesome-4.7.0/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/owl.theme.default.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'plugins/OwlCarousel2-2.2.1/animate.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/main_styles.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'styles/responsive.css' %}">
+</head>
+<body>
+
+<div class="super_container">
 
 
-{% block content %}
-    <h1>Pozdrav {{ user.username }}! Ovo je tvoj profil</h1>
-    {% if user.is_authenticated %}
+	<header class="header">
+
+		<div class="header_container">
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<div class="header_content d-flex flex-row align-items-center justify-content-start">
+							<div class="logo_container">
+								<a href="#">
+									<div class="logo_text">Jež</div>
+								</a>
+							</div>
+							<nav class="main_nav_contaner ml-auto">
+								<ul class="main_nav">
+									<li class="active"><a href="{% url 'homepage' %}">Home</a></li>
+                                    <li><a href="{% url 'studij:homepage'%}">Studiji</a></li>
+									<li class="dropdown">
+										<a class="dropdown-toggle" data-toggle="dropdown" href="#">{{user.get_username }}
+										<span class="caret"></span></a>
+										<ul class="dropdown-menu">
+											<li><a href="{% url 'account:mypage' %}">Moj profil</a></li><br>
+										  	<li><a href="{% url 'account:settings'%}">Postavke</a></li><br>
+											<li><a href="{% url 'account:logout' %}">Odjavi se</a></li><br>
+										</ul>
+      								</li>
+								</ul>
+							</nav>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+
+    {% block content %}
+    <br><br><br><br><br><br><br><br>
+    <div>
         <img src="{{ user.student.profile_image.url }}" width="240">
         <h2>Moji kolegiji:</h2>
         {% for kolegij in svi_moji_kolegiji %}
              <a href="/studij/studijski_programi/studij={{kolegij.studij_id_id}}/semestar={{kolegij.semestar}}/kolegij={{kolegij.kolegij_id}}">{{kolegij.kolegij_ime}}</a><br><br>
         {% endfor %}
-    {% endif %}
-{% endblock %}
+    </div>
+    {% endblock %}
 
+<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/popper.js' %}"></script>
+<script src="{% static 'styles/bootstrap4/bootstrap.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/TweenMax.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/TimelineMax.min.js' %}"></script>
+<script src="{% static 'plugins/scrollmagic/ScrollMagic.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/animation.gsap.min.js' %}"></script>
+<script src="{% static 'plugins/greensock/ScrollToPlugin.min.js' %}"></script>
+<script src="{% static 'plugins/OwlCarousel2-2.2.1/owl.carousel.js' %}"></script>
+<script src="{% static 'plugins/easing/easing.js' %}"></script>
+<script src="{% static 'plugins/parallax-js-master/parallax.min.js' %}"></script>
+<script src="{% static 'js/custom.js' %}"></script>
+
+</body>
+</html>
