account templates almost done

--- a/account/templates/account/change_password.html
+++ b/account/templates/account/change_password.html
@@ -1,10 +1,38 @@
-{% extends 'index.html' %}
-
+{% extends 'account/mypage.html' %}
+{% load static %}
 {% block content %}
-<h1>Promjena lozinke</h1>
-<form method="post"  enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Spremi promjene</button>
-</form>
+
+<link rel="stylesheet" type="text/css" href="{% static 'styles/style_login.css' %}">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<div class="container login-container">
+    <div class="col-md-6 login-form-1">
+        <h3>Promijeni lozinku</h3>
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+
+            <div class="form-group">
+                <label for="id_old_password">Stara lozinka:</label><br>
+                <input type="password" name="old_password" autofocus="" required="" id="id_old_password">
+            </div>
+
+            <div class="form-group">
+                <label for="id_new_password1">Nova lozinka:</label><br>
+                <input type="password" name="new_password1" required="" id="id_new_password1">
+            </div>
+
+            <div class="form-group">
+                <label for="id_new_password2">Potvrdi novu lozinku:</label><br>
+                <input type="password" name="new_password2" required="" id="id_new_password2">
+            </div>
+            <button type="submit" class="btnSubmit">Promijeni</button>
+
+        </form>
+    </div>
+</div>
+
+
+
 {% endblock %}
