--- a/account/templates/account/settings.html
+++ b/account/templates/account/settings.html
@@ -1,11 +1,60 @@
-{% extends 'index.html' %}
-
+{% extends 'account/mypage.html' %}
+{% load static %}
 {% block content %}
-<h1>Postavke korisnika</h1>
-<form method="post"  enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    {{ student_form.as_p}}
-    <button type="submit">Spremi promjene</button>
-</form>
+
+<link rel="stylesheet" type="text/css" href="{% static 'styles/style_login.css' %}">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<div class="container login-container">
+
+<div class="login-form-1">
+    <h3>Tvoj profil</h3>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="float-sm-left">
+            <img src="{{ user.student.profile_image.url }}" width="240" class="rounded-circle"><br>
+            <label for="id_profile_image" class="btn btn-default"></label>
+            <input type="file" class="form-control-sm" name="profile_image"  accept="image/*" id="id_profile_image">
+        </div>
+
+        <div class="row">
+            <div class="float-sm-right">
+
+                <div class="form-group">
+                    <label for="id_username">Korisničko ime</label>
+                    <input type="text" class="form-control" name="username" id="id_username" maxlength="150" value="{{user.username}}">
+                </div>
+
+                <div class="form-group">
+                    <label for="id_first_name">Ime</label>
+                    <input type="text" class="form-control" name="first_name" value="{{user.first_name}}" maxlength="30" id="id_first_name">
+                </div>
+
+                <div class="form-group">
+                    <label for="id_last_name">Prezime</label>
+                    <input type="text" class="form-control" name="last_name" value="{{user.last_name}}" maxlength="30" id="id_last_name">
+                </div>
+
+                <div class="form-group">
+                    <label for="id_email">Email</label>
+                    <input type="email" class="form-control" name="email" value="{{user.email}}" maxlength="30" id="id_email">
+                </div>
+
+                <div class="form-group">
+                    {{student_form.studij_id}}
+                </div>
+
+                <div class="form-group">
+                    <a href="{% url 'account:change_password' %}" class="ForgetPwd">Promijeni lozinku</a>
+                </div>
+
+                <button type="submit" class="btnSubmit"> Spremi promjene </button>
+
+            </div>
+        </div>
+    </form>
+</div>
+
 {% endblock %}
